--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Input Record</title>
+    <title>Url Record</title>
 </head>
 <body>
     <section>
         <div class="header">
-            <h1>Input Record</h1>
+            <h1>Url Record</h1>
         </div>
         <div class="main">
             <input type="text" class="input-el" placeholder="https://www.website.com/info">
