--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="header">
-            <h1>Url Record</h1>
+            <h1>Url Recorder</h1>
         </div>
         <div class="main">
             <input type="text" class="input-el" placeholder="https://www.website.com/info">
